# GeneralAviationAircraftFamilyBenchmark

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
data/: rsm_coefficients.json
example/: README.md  example_family.py  example_variant.py
src/: __init__.py  gaa.py
src/GAAFpy/: family.py  gaaf.py  utils.py  variant.py
verification_validation/: MOEA-GAA-output.csv  README.md  gaa_verifier_validator.py  validation_report.txt
