[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GAAFpy"
version = "1.0.1"
authors = [
  { name="Thomas Stephan Vermeulen", email="T.S.Vermeulen@tudelft.nl" },
]
description = "Python implementation of the GAA family benchmark problem developed by T.W. Simpson et al."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy"
]
keywords = [
    "general aviation aircraft",
    "general aviation aircraft family",
    "general aviation",
    "aircraft family",
    "benchmark problem",
    "optimization"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/TSVermeulen/GeneralAviationAircraftFamilyBenchmark"
Issues = "https://github.com/TSVermeulen/GeneralAviationAircraftFamilyBenchmark/issues"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
GAAFpy = ["*.json"]
